<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuzzleProblemActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/puzzle_moves"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:columnCount="3"
        app:rowCount="3">

        <Button
            android:id="@+id/tile5"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile5Button"
            android:text="@string/tile_5"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/tile2"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile2Button"
            android:text="@string/tile_2"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/tile7"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile7Button"
            android:text="@string/tile_7"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/tile4"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile4Button"
            android:text="@string/tile_4"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/tile1"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile1Button"
            android:text="@string/tile_1"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/tile6"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile6Button"
            android:text="@string/tile_6"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/tile3"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile3Button"
            android:text="@string/tile_3"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/tile8"
            style="@style/TileStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tile8Button"
            android:text="@string/tile_8"
            app:layout_column="0"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="solveButton"
        android:text="@string/solve_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzleStatus" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="nextButton"
        android:text="@string/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="resetButton"
        android:text="@string/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/puzzleStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />

    <TextView
        android:id="@+id/puzzleStats"
        android:layout_width="203dp"
        android:layout_height="157dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/puzzle_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/puzzleStatus" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="openMain"
        android:text="@string/return_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>